# shakti

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  cyrius.cyml
.github/workflows/: ci.yml  release.yml
benches/: core.rs
benchmarks/: history.csv
docs/adr/: 001-timestamp-o-nofollow.md  002-initgroups-for-target-user.md  003-argument-level-command-matching.md  004-env-sanitization-strategy.md  005-identity-backend-port-to-cyrius.md  006-pam-auth-via-unix-chkpwd.md  007-capability-based-privilege.md  008-session-logging-openpty.md  009-lsm-exec-context.md  010-nss-group-dispatch-via-fdlopen.md  011-tiocsti-pty-for-lateral-uid.md
docs/architecture/: overview.md  threat-model.md
docs/audit/: 2026-04-20-external-cve-review.md  2026-04-20-internal-review.md  2026-06-02-internal-review.md  2026-06-16-0.7.0-cve-audit.md  README.md
docs/development/: dependency-watch.md  roadmap.md
docs/examples/: README.md  sudoers.toml
fuzz/: Cargo.toml  smoke.fcyr
fuzz/fuzz_targets/: fuzz_command_matches.rs  fuzz_validate_command.rs  fuzz_validate_username.rs
lib/: alloc_macos.cyr  args.cyr  dynlib.cyr  fnptr.cyr  grp.cyr  mabda.cyr  patra.cyr  sankoch.cyr  toml.cyr  ws_server.cyr
rust-old/: Cargo.toml  deny.toml
scripts/: bench-history.sh  install.sh  version-bump.sh
src/: api.cyr  api.rs  audit.cyr  audit.rs  auth.cyr  caps.cyr  cli.cyr  env.cyr  env.rs  identity.cyr  lib.cyr  lib.rs  lsm.cyr  main.cyr  main.rs  policy.cyr  policy.rs  session.cyr  timestamp.cyr  timestamp.rs  validate.cyr  validate.rs
(+40 files in other folders)
